CustomObjects/objects/invoiceit_s__Credit_Line__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <fields>
        <fullName>invoiceit_s__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Calculated_Quantity__c</fullName>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charge_End_Date__c</fullName>
        <label>Charge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charge_Start_Date__c</fullName>
        <label>Charge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Note__c</fullName>
        <label>Credit Note</label>
        <referenceTo>invoiceit_s__Credit_Note__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Credit_Type_Applied__c</fullName>
        <description>This field is used when partial credit is applied. 
Amount - when you explicitly specify a credit amount
Date - when you want the system to calculate the credit based on the dates (applies only for subscriptions)
Both - when you explicitly specify a credit amount but you want the revrec to allocate it to the mentioned period</description>
        <inlineHelpText>Used for partial credit
Amount - explicitly specify a credit amount
Date - system would calculate the credit based on the dates (applies only for subscriptions)
Both - specify a credit amount but revrec is allocated to specified period</inlineHelpText>
        <label>Credit Type Applied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <label>Obsolete Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Error_Reason_for_Revenue_Recognition__c</fullName>
        <label>Error Reason for Revenue Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>invoiceit_s__Invoice_Lines__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Line_Amount__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Line_Name__c</fullName>
        <label>Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Net_Total__c</fullName>
        <formula>invoiceit_s__Line_Amount__c - invoiceit_s__Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Type__c</fullName>
        <description>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</description>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Pricing_Model__c</fullName>
        <description>This will specify whether price is default type or tiered type.</description>
        <inlineHelpText>This will specify whether price is default type or tiered type.</inlineHelpText>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee Pricing</fullName>
                </value>
                <value>
                    <fullName>Per Unit Pricing</fullName>
                </value>
                <value>
                    <fullName>Tiered Pricing</fullName>
                </value>
                <value>
                    <fullName>Volume Pricing</fullName>
                </value>
                <value>
                    <fullName>Percentage Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>invoiceit_s__Product__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>invoiceit_s__Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Status__c</fullName>
        <label>Revenue Recognition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Sequence_No__c</fullName>
        <label>Sl No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Posted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Line_Value__c</fullName>
        <formula>invoiceit_s__Line_Amount__c - invoiceit_s__Discount_Value__c + invoiceit_s__VAT__c + invoiceit_s__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Credit Line</label>
    <nameField>
        <displayFormat>CLINE--{0000}</displayFormat>
        <label>Credit Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Cannot_Change_status_from_cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE
(invoiceit_s__Status__c), 
&quot;Cancelled&quot;) &amp;&amp; ISCHANGED(invoiceit_s__Status__c)</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of a cancelled credit line</errorMessage>
    </validationRules>
</CustomObject>